--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -4,9 +4,9 @@
     tools:context="com.insider.kontrollkunde.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_log_out"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_log_out"
         app:showAsAction="never"/>
 
 </menu>
