--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -6,6 +6,10 @@
         res/values-v11/styles.xml on API 14+ devices.
     -->
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:windowNoTitle">true</item>
+	    <item name="windowActionBar">false</item>
+	    <item name="android:windowFullscreen">true</item>
+	    <item name="android:windowContentOverlay">@null</item>
         <!-- API 14 theme customizations can go here. -->
     </style>
 
