--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,6 +7,6 @@
         android:id="@+id/action_log_out"
         android:orderInCategory="100"
         android:title="@string/action_log_out"
-        app:showAsAction="never"/>
+        app:showAsAction="always"/>
 
 </menu>
