--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -1,15 +1,14 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme for API 14+. This theme completely replaces
         AppBaseTheme from BOTH res/values/styles.xml and
         res/values-v11/styles.xml on API 14+ devices.
     -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:windowNoTitle">true</item>
-	    <item name="windowActionBar">false</item>
-	    <item name="android:windowFullscreen">true</item>
-	    <item name="android:windowContentOverlay">@null</item>
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
+        
+        <item name="android:background">@color/grey2</item>
+        <item name="android:textSize">@dimen/text_size</item>
         <!-- API 14 theme customizations can go here. -->
     </style>
 
