--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,17 +6,18 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/grey2"
     tools:context="com.insider.kontrollkunde.MainActivity" >
 
     <AutoCompleteTextView
         android:id="@+id/custselect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/custlabel"
-        android:layout_centerHorizontal="true"
-        android:ems="10" 
-        android:singleLine="true"
-        android:textColor="@color/red">
+        android:ems="10"
+        android:singleLine="true" >
 
         <requestFocus />
     </AutoCompleteTextView>
@@ -32,17 +33,6 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/regbutton"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:layout_below="@+id/custselect"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="87dp"
-        android:onClick="register"
-        android:text="Registrer vask"
-        android:textStyle="bold" />
-
-    <Button
         android:id="@+id/qualitybutton"
         android:layout_width="wrap_content"
         android:layout_height="65dp"
@@ -53,5 +43,38 @@
         android:text="Kvalitetsrapport"
         android:textStyle="bold"
         android:visibility="gone" />
+
+    <EditText
+        android:id="@+id/msgText"
+        android:layout_width="wrap_content"
+        android:layout_height="90dp"
+        android:layout_alignLeft="@+id/regbutton"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/messagebutton"
+        android:background="@android:color/white"
+        android:ems="10"
+        android:textSize="18sp"
+        android:visibility="invisible" />
+
+    <Button
+        android:id="@+id/regbutton"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/msgText"
+        android:onClick="register"
+        android:text="Registrer vask"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/messagebutton"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/custselect"
+        android:text="Melding"
+        android:textSize="12sp" 
+        android:onClick="showMessage"/>
 
 </RelativeLayout>
