--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -51,8 +51,9 @@
         android:layout_alignLeft="@+id/regbutton"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/messagebutton"
-        android:background="@android:color/white"
+        android:background="@drawable/textlines"
         android:ems="10"
+        android:padding="10dp"
         android:textSize="18sp"
         android:visibility="invisible" />
 
