Added functionality to Kvalitetsrapport

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
         android:layout_below="@+id/regbutton"
         android:layout_marginTop="60dp"
         android:text="Kvalitetsrapport"
+        android:onClick="quality"
         android:textStyle="bold"
         android:visibility="gone" />
 
